[tool.poetry]
name = "roadsurfer"
version = "0.1.0"
description = ""
authors = ["Reid Meyer <reid.meyer@kpn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
types-requests = "^2.31.0.20240106"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["roadsurfer"]
ignore_errors = true
ignore_missing_imports = true
